Duplicating an armature clears B-Bones' custom handle references #63794

Closed
opened 2019-04-22 08:15:05 +02:00 by yvt · 3 comments
Contributor

System Information
Operating system: macOS 10.14.4
Graphics card: AMD Radeon R9 M295X 4GB

Blender Version
Broken: blender-2.80.0-git20190422.797539e76ccf-x86_64

Short description of error
Duplicating an armature clears B-Bones' custom handle references.

Screen Shot 2019-04-22 at 14.59.38.png.jpg

Exact steps for others to reproduce the error

# Create an armature and enter Edit Mode
bpy.ops.object.armature_add()
bpy.ops.object.editmode_toggle()

# Change the armature's display mode to visualize B-Bones
bpy.context.active_object.data.display_type = 'BBONE'

# Duplicate `Bone` as `Bone.001`
bpy.ops.armature.select_all(action='SELECT')
bpy.ops.armature.duplicate_move(TRANSFORM_OT_translate={"value":(1, 0, 0), "orient_type":'GLOBAL'})

# Set up the bendy bone
bpy.context.active_object.data.edit_bones['Bone'].bbone_segments = 32
bpy.context.active_object.data.edit_bones['Bone'].bbone_handle_type_start = 'ABSOLUTE'
bpy.context.active_object.data.edit_bones['Bone'].bbone_custom_handle_start = bpy.context.active_object.data.edit_bones['Bone.001']
assert bpy.context.active_object.data.edit_bones['Bone'].bbone_custom_handle_start == bpy.context.active_object.data.edit_bones['Bone.001']

# Exit Edit Mode
bpy.ops.object.editmode_toggle()

# Duplicate the armature, selecting the new armature
bpy.context.object.data.bones['Bone'].bbone_handle_type_start = 'ABSOLUTE'
bpy.ops.object.duplicate_move(OBJECT_OT_duplicate={"linked":False, "mode":'TRANSLATION'}, TRANSFORM_OT_translate={"value":(0, -2, 0), "orient_type":'GLOBAL'})

# Enter Edit Mode
bpy.ops.object.editmode_toggle()

- Expected: The following assertion is satisfied.
- Actual: The following assertion is broken, throwing `AssertionError`.
assert bpy.context.active_object.data.edit_bones['Bone'].bbone_custom_handle_start == bpy.context.active_object.data.edit_bones['Bone.001']
**System Information** Operating system: macOS 10.14.4 Graphics card: AMD Radeon `R9` M295X 4GB **Blender Version** Broken: `blender-2.80.0-git20190422.797539e76ccf-x86_64` **Short description of error** Duplicating an armature clears B-Bones' custom handle references. ![Screen Shot 2019-04-22 at 14.59.38.png.jpg](https://archive.blender.org/developer/F6966039/Screen_Shot_2019-04-22_at_14.59.38.png.jpg) **Exact steps for others to reproduce the error** ``` # Create an armature and enter Edit Mode bpy.ops.object.armature_add() bpy.ops.object.editmode_toggle() # Change the armature's display mode to visualize B-Bones bpy.context.active_object.data.display_type = 'BBONE' # Duplicate `Bone` as `Bone.001` bpy.ops.armature.select_all(action='SELECT') bpy.ops.armature.duplicate_move(TRANSFORM_OT_translate={"value":(1, 0, 0), "orient_type":'GLOBAL'}) # Set up the bendy bone bpy.context.active_object.data.edit_bones['Bone'].bbone_segments = 32 bpy.context.active_object.data.edit_bones['Bone'].bbone_handle_type_start = 'ABSOLUTE' bpy.context.active_object.data.edit_bones['Bone'].bbone_custom_handle_start = bpy.context.active_object.data.edit_bones['Bone.001'] assert bpy.context.active_object.data.edit_bones['Bone'].bbone_custom_handle_start == bpy.context.active_object.data.edit_bones['Bone.001'] # Exit Edit Mode bpy.ops.object.editmode_toggle() # Duplicate the armature, selecting the new armature bpy.context.object.data.bones['Bone'].bbone_handle_type_start = 'ABSOLUTE' bpy.ops.object.duplicate_move(OBJECT_OT_duplicate={"linked":False, "mode":'TRANSLATION'}, TRANSFORM_OT_translate={"value":(0, -2, 0), "orient_type":'GLOBAL'}) # Enter Edit Mode bpy.ops.object.editmode_toggle() - Expected: The following assertion is satisfied. - Actual: The following assertion is broken, throwing `AssertionError`. assert bpy.context.active_object.data.edit_bones['Bone'].bbone_custom_handle_start == bpy.context.active_object.data.edit_bones['Bone.001'] ```
Author
Contributor

Added subscriber: @TomoakiKawada

Added subscriber: @TomoakiKawada
yvt was assigned by Sebastian Parborg 2019-04-25 15:13:37 +02:00

This issue was referenced by 9e3246ce6e

This issue was referenced by 9e3246ce6e9767148e4394dc7acbec04a7d69163
yvt was unassigned by Alexander Gavrilov 2019-04-28 16:07:51 +02:00
Alexander Gavrilov self-assigned this 2019-04-28 16:07:51 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63794
No description provided.